--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongodb": "^6.10.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
